src/lib_duktape.cr

# lib_duktape.cr: crystal bindings for duktape
#
# Copyright (c) 2015 Jesse Doyle. All rights reserved.
#
# This is free software. Please see LICENSE for details.

@[Link(ldflags: "-L#{__DIR__}/.build/lib -L#{__DIR__}/.build/include -lduktape -lm")]
lib LibDUK
  alias Context = Void*

  BUF_FLAG_DYNAMIC  = 1_u32
  BUF_FLAG_EXTERNAL = 2_u32
  BUF_FLAG_NOZERO   = 4_u32

  BUF_MODE_FIXED    = 0_u32
  BUF_MODE_DYNAMIC  = 1_u32
  BUF_MODE_DONTCARE = 2_u32

  BUFOBJ_CREATE_ARRBUF     = 16_u32
  BUFOBJ_DUKTAPE_BUFFER    =  0_u32
  BUFOBJ_NODEJS_BUFFER     =  1_u32
  BUFOBJ_ARRAY_BUFFER      =  2_u32
  BUFOBJ_DATAVIEW          = (3_u32 | BUFOBJ_CREATE_ARRBUF)
  BUFOBJ_INT8ARRAY         = (4_u32 | BUFOBJ_CREATE_ARRBUF)
  BUFOBJ_UINT8ARRAY        = (5_u32 | BUFOBJ_CREATE_ARRBUF)
  BUFOBJ_UINT8CLAMPEDARRAY = (6_u32 | BUFOBJ_CREATE_ARRBUF)
  BUFOBJ_INT16ARRAY        = (7_u32 | BUFOBJ_CREATE_ARRBUF)
  BUFOBJ_UINT16ARRAY       = (8_u32 | BUFOBJ_CREATE_ARRBUF)
  BUFOBJ_INT32ARRAY        = (9_u32 | BUFOBJ_CREATE_ARRBUF)
  BUFOBJ_UINT32ARRAY       = (10_u32 | BUFOBJ_CREATE_ARRBUF)
  BUFOBJ_FLOAT32ARRAY      = (11_u32 | BUFOBJ_CREATE_ARRBUF)
  BUFOBJ_FLOAT64ARRAY      = (12_u32 | BUFOBJ_CREATE_ARRBUF)

  COMPILE_EVAL     = 0x01_u32
  COMPILE_FUNCTION = 0x02_u32
  COMPILE_STRICT   = 0x04_u32
  COMPILE_SAFE     = 0x08_u32
  COMPILE_NORESULT = 0x10_u32
  COMPILE_NOSOURCE = 0x20_u32
  COMPILE_STRLEN   = 0x40_u32

  DEFPROP_WRITABLE          =   1_u32
  DEFPROP_ENUMERABLE        =   2_u32
  DEFPROP_CONFIGURABLE      =   4_u32
  DEFPROP_HAVE_WRITABLE     =   8_u32
  DEFPROP_HAVE_ENUMERABLE   =  16_u32
  DEFPROP_HAVE_CONFIGURABLE =  32_u32
  DEFPROP_HAVE_VALUE        =  64_u32
  DEFPROP_HAVE_GETTER       = 128_u32
  DEFPROP_HAVE_SETTER       = 256_u32
  DEFPROP_FORCE             = 512_u32

  ENUM_INCLUDE_NONENUMERABLE =  1_u32
  ENUM_INCLUDE_INTERNAL      =  2_u32
  ENUM_OWN_PROPERTIES_ONLY   =  4_u32
  ENUM_ARRAY_INDICIES_ONLY   =  8_u32
  ENUM_SORT_ARRAY_INDICIES   = 16_u32
  ENUM_NO_PROXY_BEHAVIOR     = 32_u32

  # Internal Error Codes
  ERR_NONE                =  0
  ERR_UNIMPLEMENTED_ERROR = 50
  ERR_UNSUPPORTED_ERROR   = 51
  ERR_INTERNAL_ERROR      = 52
  ERR_ALLOC_ERROR         = 53
  ERR_ASSERTION_ERROR     = 54
  ERR_API_ERROR           = 55
  ERR_UNCAUGHT_ERROR      = 56

  EXEC_SUCCESS = 0
  EXEC_ERROR   = 1

  # ECMAScript Error Codes
  ERR_ERROR           = 100
  ERR_EVAL_ERROR      = 101
  ERR_RANGE_ERROR     = 102
  ERR_REFERENCE_ERROR = 103
  ERR_SYNTAX_ERROR    = 104
  ERR_TYPE_ERROR      = 105
  ERR_URI_ERROR       = 106

  INVALID_INDEX = Int32::MIN

  HINT_NONE   = 0
  HINT_STRING = 1
  HINT_NUMBER = 2

  THREAD_NEW_GLOBAL_ENV = 1_u32

  TYPE_NONE      = 0
  TYPE_UNDEFINED = 1
  TYPE_NULL      = 2
  TYPE_BOOLEAN   = 3
  TYPE_NUMBER    = 4
  TYPE_STRING    = 5
  TYPE_OBJECT    = 6
  TYPE_BUFFER    = 7
  TYPE_POINTER   = 8
  TYPE_LIGHTFUNC = 9

  TYPE_MASK_NONE      = (1 << TYPE_NONE).to_u32
  TYPE_MASK_UNDEFINED = (1 << TYPE_UNDEFINED).to_u32
  TYPE_MASK_NULL      = (1 << TYPE_NULL).to_u32
  TYPE_MASK_BOOLEAN   = (1 << TYPE_BOOLEAN).to_u32
  TYPE_MASK_NUMBER    = (1 << TYPE_NUMBER).to_u32
  TYPE_MASK_STRING    = (1 << TYPE_STRING).to_u32
  TYPE_MASK_OBJECT    = (1 << TYPE_OBJECT).to_u32
  TYPE_MASK_BUFFER    = (1 << TYPE_BUFFER).to_u32
  TYPE_MASK_POINTER   = (1 << TYPE_POINTER).to_u32
  TYPE_MASK_LIGHTFUNC = (1 << TYPE_LIGHTFUNC).to_u32
  TYPE_MASK_THROW     = (1 << 10).to_u32

  VARARGS = -1_i32

  struct TimeoutData
    start : LibC::TimeVal
    timeout : LibC::TimeVal
  end

  struct MemoryFunctions
    alloc_func : Void*
    realloc_func : Void*
    free_func : Void*
    udata : Void*
  end

  struct FuncListEntry
    key : UInt8*
    value : Int32
    nargs : Int32
  end

  struct NumberListEntry
    key : UInt8*
    value : Float64
  end

  # Memory Functions
  fun alloc = duk_alloc(ctx : Context, size : Int32) : Void*
  fun alloc_raw = duk_alloc_raw(ctx : Context, size : Int32) : Void*
  fun free = fuk_free(ctx : Context, ptr : Void*)
  fun free_raw = duk_free_raw(ctx : Context, ptr : Void*)
  fun gc = duk_gc(ctx : Context, flags : UInt32)
  fun get_memory_functions = duk_get_memory_functions(ctx : Context, out_func : MemoryFunctions*)
  fun realloc = duk_realloc(ctx : Context, ptr : Void*, size : Int32) : Void*
  fun realloc_raw = duk_realloc_raw(ctx : Context, ptr : Void*, size : Int32) : Void*

  # Context Management
  fun create_heap = duk_create_heap(alloc_func : Void*, realloc_func : Void*, free_func : Void*, heap_data : Void*, fatal_func : Void*) : Context
  fun destroy_heap = duk_destroy_heap(ctx : Context)

  # Error Handling
  @[Raises]
  fun throw = duk_throw(ctx : Context)
  @[Raises]
  fun fatal = duk_fatal(ctx : Context, err : Int32, msg : UInt8*)
  @[Raises]
  fun error_raw = duk_error_raw(ctx : Context, err : Int32, file : UInt8*, line : Int32, fmt : UInt8*, ...)
  fun error_stash = duk_error_stash(ctx : Context, err : Int32, fmt : UInt8*, ...)
  fun get_error_code = duk_get_error_code(ctx : Context, index : Int32) : Int32

  # State-related
  fun is_strict_call = duk_is_strict_call(ctx : Context) : Int32
  fun is_constructor_call = duk_is_constructor_call(ctx : Context) : Int32

  # Stack Management
  fun normalize_index = duk_normalize_index(ctx : Context, index : Int32) : Int32
  fun require_normalize_index = duk_require_normalize_index(ctx : Context, index : Int32) : Int32
  fun is_valid_index = duk_is_valid_index(ctx : Context, index : Int32) : Int32
  fun require_valid_index = duk_require_valid_index(ctx : Context, index : Int32)
  fun get_top = duk_get_top(ctx : Context) : Int32
  fun set_top = duk_set_top(ctx : Context, index : Int32)
  fun get_top_index = duk_get_top_index(ctx : Context) : Int32
  fun require_top_index = duk_require_top_index(ctx : Context) : Int32
  fun check_stack = duk_check_stack(ctx : Context, extra : Int32) : Int32
  fun require_stack = duk_require_stack(ctx : Context, extra : Int32)
  fun check_stack_top = duk_check_stack_top(ctx : Context, top : Int32) : Int32
  fun require_stack_top = duk_require_stack_top(ctx : Context, top : Int32)

  # Stack Manipulation
  fun swap = duk_swap(ctx : Context, idx_1 : Int32, idx_2 : Int32)
  fun swap_top = duk_swap_top(ctx : Context, index : Int32)
  fun dup = duk_dup(ctx : Context, from_index : Int32)
  fun dup_top = duk_dup_top(ctx : Context)
  fun insert = duk_insert(ctx : Context, to_index : Int32)
  fun replace = duk_replace(ctx : Context, to_index : Int32)
  fun copy = duk_copy(ctx : Context, from_index : Int32, to_index : Int32)
  fun remove = duk_remove(ctx : Context, index : Int32)
  fun xcopymove_raw = duk_xcopymove_raw(to : Context, from : Context, count : Int32, is_copy : Int32)

  # Push Operations
  fun push_undefined = duk_push_undefined(ctx : Context)
  fun push_null = duk_push_null(ctx : Context)
  fun push_boolean = duk_push_boolean(ctx : Context, val : Int32)
  fun push_true = duk_push_true(ctx : Context)
  fun push_false = duk_push_false(ctx : Context)
  fun push_number = duk_push_number(ctx : Context, val : Float64)
  fun push_nan = duk_push_nan(ctx : Context)
  fun push_int = duk_push_int(ctx : Context, val : Int32)
  fun push_uint = duk_push_uint(ctx : Context, val : UInt32)
  fun push_string = duk_push_string(ctx : Context, str : UInt8*) : UInt8*
  fun push_lstring = duk_push_lstring(ctx : Context, str : UInt8*, len : Int32) : UInt8*
  fun push_pointer = duk_push_pointer(ctx : Context, ptr : Void*)
  fun push_sprintf = duk_push_sprintf(ctx : Context, fmt : UInt8*, ...) : UInt8*
  fun push_vsprintf = duk_push_vsprintf(ctx : Context, fmt : UInt8*, ap : Void*) : UInt8*
  fun push_string_file_raw = duk_push_string_file_raw(ctx : Context, path : UInt8*, flags : UInt32) : UInt8*
  fun push_this = duk_push_this(ctx : Context)
  fun push_current_function = duk_push_current_function(ctx : Context)
  fun push_current_thread = duk_push_current_thread(ctx : Context)
  fun push_global_object = duk_push_global_object(ctx : Context)
  fun push_global_stash = duk_push_global_stash(ctx : Context)
  fun push_heap_stash = duk_push_heap_stash(ctx : Context)
  fun push_thread_stash = duk_push_thread_stash(ctx : Context, target : Context)
  fun push_object = duk_push_object(ctx : Context) : Int32
  fun push_array = duk_push_array(ctx : Context) : Int32
  fun push_c_function = duk_push_c_function(ctx : Context, func : Context -> Int32, nargs : Int32) : Int32
  fun push_c_lightfunc = duk_push_c_lightfunc(ctx : Context, func : Context -> Int32, nargs : Int32) : Int32
  fun push_thread_raw = duk_push_thread_raw(ctx : Context, flags : UInt32) : Int32
  fun push_error_object_raw = duk_push_error_object_raw(ctx : Context, err : Int32, filename : UInt8*, line : Int32, fmt : UInt8*, ...) : Int32
  fun push_error_object_stash = duk_push_error_object_stash(ctx : Context, err : Int32, fmt : UInt8*, ...) : Int32
  fun push_error_object_va_raw = duk_push_error_object_va_raw(ctx : Context, err : Int32, filename : UInt8*, line : Int32, fmt : UInt8*, ap : Void*) : Int32
  fun push_buffer_raw = duk_push_buffer_raw(ctx : Context, size : Int32, flags : UInt32) : Void*
  fun push_heapptr = duk_push_heapptr(ctx : Context, ptr : Void*) : Int32

  # Pop Operations
  fun pop = duk_pop(ctx : Context)
  fun pop_n = duk_pop_n(ctx : Context, count : Int32)
  fun pop_2 = duk_pop_2(ctx : Context)
  fun pop_3 = duk_pop_3(ctx : Context)

  # Type Checks
  fun get_type = duk_get_type(ctx : Context, index : Int32) : Int32
  fun check_type = duk_check_type(ctx : Context, index : Int32, t : Int32) : Int32
  fun get_type_mask = duk_get_type_mask(ctx : Context, index : Int32) : UInt32
  fun check_type_mask = duk_check_type_mask(ctx : Context, index : Int32, mask : UInt32) : Int32
  fun is_undefined = duk_is_undefined(ctx : Context, index : Int32) : Int32
  fun is_null = duk_is_null(ctx : Context, index : Int32) : Int32
  fun is_null_or_undefined = duk_is_null_or_undefined(ctx : Context, index : Int32) : Int32
  fun is_boolean = duk_is_boolean(ctx : Context, index : Int32) : Int32
  fun is_number = duk_is_number(ctx : Context, index : Int32) : Int32
  fun is_nan = duk_is_nan(ctx : Context, index : Int32) : Int32
  fun is_string = duk_is_string(ctx : Context, index : Int32) : Int32
  fun is_object = duk_is_object(ctx : Context, index : Int32) : Int32
  fun is_buffer = duk_is_buffer(ctx : Context, index : Int32) : Int32
  fun is_pointer = duk_is_pointer(ctx : Context, index : Int32) : Int32
  fun is_lightfunc = duk_is_lightfunc(ctx : Context, index : Int32) : Int32
  fun is_array = duk_is_array(ctx : Context, index : Int32) : Int32
  fun is_function = duk_is_function(ctx : Context, index : Int32) : Int32
  fun is_c_function = duk_is_c_function(ctx : Context, index : Int32) : Int32
  fun is_ecmascript_function = duk_is_ecmascript_function(ctx : Context, index : Int32) : Int32
  fun is_bound_function = duk_is_bound_function(ctx : Context, index : Int32) : Int32
  fun is_thread = duk_is_thread(ctx : Context, index : Int32) : Int32
  fun is_dynamic_buffer = duk_is_dynamic_buffer(ctx : Context, index : Int32) : Int32
  fun is_fixed_buffer = duk_is_fixed_buffer(ctx : Context, index : Int32) : Int32
  fun is_external_buffer = duk_is_external_buffer(ctx : Context, index : Int32) : Int32
  fun is_primitive = duk_is_primitive(ctx : Context, index : Int32) : Int32
